Another solution for Ex2 Lab1

--- a/lab1_QLearning/Ex2_Q_Learning.ipynb
+++ b/lab1_QLearning/Ex2_Q_Learning.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "import gymnasium as gym\n",
@@ -331,11 +331,11 @@
         "        # if random_num > greater than epsilon --> exploitation\n",
         "        if random_num > epsilon:\n",
         "           # Take the action with the highest value given a state\n",
-        "           action = #--- add code here----------\n",
+        "           action = np.unravel_index(np.argmax(self.q_table), self.q_table.shape)[1]\n",
         "\n",
         "        # else --> exploration\n",
         "        else:\n",
-        "           action = #--- add code here----------\n",
+        "           action = env.action_space.sample()\n",
         "\n",
         "        return action\n",
         "\n",
