--- a/lab1_QLearning/Ex2_Q_Learning.ipynb
+++ b/lab1_QLearning/Ex2_Q_Learning.ipynb
@@ -331,9 +331,9 @@
         "        # if random_num > greater than epsilon --> exploitation\n",
         "        if random_num > epsilon:\n",
         "           # Take the action with the highest value given a state\n",
-        "           action = np.unravel_index(np.argmax(self.q_table), self.q_table.shape)[1]\n",
+        "           action = np.argmax(self.q_table[state])\n",
         "\n",
-        "        # else --> exploration\n",
+        "        # else -->\n",
         "        else:\n",
         "           action = env.action_space.sample()\n",
         "\n",
@@ -343,12 +343,13 @@
         "        \"\"\"\"\"\"\n",
         "        # Q-learning formula\n",
         "        # Update Q(s,a):= Q(s,a) + lr [R(s,a)  + gamma * max Q(s',a') - Q(s,a)]\n",
-        "        old_value = #--- add code here----------\n",
-        "        next_max = #--- add code here----------\n",
-        "        new_value = #--- add code here----------\n",
+        "        old_value = self.q_table[state, action]\n",
+        "        next_max = np.max(self.q_table[next_state, :])\n",
+        "        new_value = old_value + self.alpha * (reward + self.gamma * next_max - old_value)\n",
         "\n",
         "        # update the q_table\n",
-        "        #--- add code here----------"
+        "        #--- add code here----------\n",
+        "        self.q_table[state, action] = new_value"
       ]
     },
     {
