--- a/lab2_Deep_Q_Learning/EX1_DQN_CartPole_2025.ipynb
+++ b/lab2_Deep_Q_Learning/EX1_DQN_CartPole_2025.ipynb
@@ -29,7 +29,7 @@
         "outputId": "be7e79b0-0c25-4a77-9383-7a73517cf4c3",
         "is_executing": true
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,7 +71,7 @@
         "id": "VpsHzyWmseVk",
         "is_executing": true
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "cQJgkAMMsEoK"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
       "metadata": {
         "id": "jQk7LBu5s3yo"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
       "metadata": {
         "id": "W2a1w61qtpWV"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,13 +169,13 @@
         "\n",
         "           # Q-Network\n",
         "           # create the local and the target networks\n",
-        "           self.local_dqn =  #--add code here---\n",
-        "           self.target_dqn =  #--add code here---\n",
+        "           self.local_dqn = QNetwork(self.state_shape, self.h1_nodes, self.action_space_size, self.seed) #--add code here---\n",
+        "           self.target_dqn = QNetwork(self.state_shape, self.h1_nodes, self.action_space_size, self.seed) #--add code here---\n",
         "\n",
         "           self.optimizer = optim.Adam(self.local_dqn.parameters(), lr=self.learning_rate)\n",
         "\n",
         "           # Replay memory\n",
-        "           self.memory = ReplayMemory( self.replay_memory_size,self.batch_size)\n",
+        "           self.memory = ReplayMemory(self.replay_memory_size, self.batch_size)\n",
         "\n",
         "           # Initialize time step (for learn every LEARN_EVERY steps)\n",
         "           self.l_step = 0\n",
@@ -190,9 +190,10 @@
         "        #Epsilon-greedy action selection\n",
         "        def act(self, state, eps=0.):\n",
         "          if random.random() > eps:\n",
-        "            #--add code here---\n",
+        "            action_values = self.local_dqn(self.state_to_dqn_input(state))\n",
+        "            return np.argmax(action_values.cpu().data.numpy()) #--add code here---\n",
         "          else:\n",
-        "            #--add code here---\n",
+        "            return random.choice(np.arrange(self.action_space_size)) #--add code here---\n",
         "\n",
         "        def step(self, state, action, reward, next_state, done):\n",
         "           # Save experience in replay memory\n",
@@ -240,8 +241,7 @@
         "          loss.backward()\n",
         "          self.optimizer.step()\n",
         "\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "YbRg16A-uGjZ"
