--- a/lab2_Deep_Q_Learning/EX1_DQN_CartPole_2025.ipynb
+++ b/lab2_Deep_Q_Learning/EX1_DQN_CartPole_2025.ipynb
@@ -198,17 +198,18 @@
         "        def step(self, state, action, reward, next_state, done):\n",
         "           # Save experience in replay memory\n",
         "           #----------add code here---\n",
-        "\n",
+        "           self.memory.append((state, action, reward, next_state, done))\n",
         "           # If enough samples are available in memory, get random subset and learn\n",
         "           self.l_step = (self.l_step + 1) % self.LERN_EVERY\n",
         "           if self.l_step == 0 and len(self.memory) > self.batch_size:\n",
-        "                experiences = #--add code here---\n",
+        "                experiences = self.memory.sample()#--add code here---\n",
         "                #--add code here---\n",
+        "                self.learn(experiences)\n",
         "\n",
         "           # Copy local network to target network every UPDATE_EVERY time steps\n",
         "           self.t_step = (self.t_step + 1) % self.UPDATE_EVERY\n",
         "           if self.t_step == 0:\n",
-        "              #--add code here---\n",
+        "              self.target_dqn.load_state_dict(self.local_dqn.state_dict()) #--add code here---\n",
         "\n",
         "        def learn(self, experiences):\n",
         "          q_target_list = []\n",
@@ -217,20 +218,20 @@
         "          for  state, action, reward, next_state, done in experiences:\n",
         "\n",
         "             # Convert state, next_state, action abd reward to tensors\n",
-        "             state =#--add code here---\n",
-        "             next_state = #--add code here---\n",
+        "             state = self.state_to_dqn_input(state)#--add code here---\n",
+        "             next_state = self.state_to_dqn_input(next_state) #--add code here---\n",
         "             action= torch.from_numpy(np.array([action])).long().unsqueeze(0).to(device)\n",
         "             reward = torch.from_numpy(np.array([reward])).float().to(device)\n",
         "             ## Compute and minimize the loss\n",
         "\n",
         "             ### Extract next maximum estimated value from target network\n",
         "             if(done):\n",
-        "               q_target =  #--add code here---\n",
+        "               q_target = reward #--add code here---\n",
         "             else:\n",
-        "               q_target=  #--add code here---\n",
+        "               q_target= reward + self.GAMMA * self.target_dqn(next_state).max(1)[0]  #--add code here---\n",
         "\n",
         "             ### Calculate expected value from local network\n",
-        "             q_local = #--add code here---\n",
+        "             q_local = self.local_dqn(state).gather(1, action) #--add code here---\n",
         "\n",
         "             q_target_list.append(q_target)\n",
         "             q_expected_list.append(q_local)\n",
