more answsers to the notebook

--- a/lab2_Deep_Q_Learning/EX1_DQN_CartPole_2025.ipynb
+++ b/lab2_Deep_Q_Learning/EX1_DQN_CartPole_2025.ipynb
@@ -266,13 +266,14 @@
         "        score = 0\n",
         "        for t in range(max_t):\n",
         "            # select an action\n",
-        "            action = #--add code here---\n",
+        "            action = agent.act(state, eps)\n",
         "\n",
         "            #apply the selected action\n",
-        "            next_state, reward, done, _,_=env.step(action)\n",
+        "            next_state, reward, done, _, _ = env.step(action)\n",
         "\n",
         "            # store the current experience\n",
         "            #--add code here---\n",
+        "            agent.step(state, action, reward, next_state, done)\n",
         "\n",
         "            state = next_state\n",
         "            score += reward\n",
