--- a/lab4_Actor_Critic/EX_Actor_Critic.ipynb
+++ b/lab4_Actor_Critic/EX_Actor_Critic.ipynb
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 144,
       "metadata": {
-        "id": "qH14nvkuY_iF",
-        "outputId": "f1f56555-0e05-4653-ba0b-055e82166b43",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qH14nvkuY_iF",
+        "outputId": "a426b2d4-df3d-49a8-deda-5eea24bc08d3"
       },
       "outputs": [
         {
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": 145,
       "metadata": {
         "id": "J3NZuPhXY_iI"
       },
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": 146,
       "metadata": {
         "id": "df1cJ9_xY_iK"
       },
@@ -134,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 147,
       "metadata": {
         "id": "lcwtErdjY_iN"
       },
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 148,
       "metadata": {
         "id": "RO2cWL8CY_iS"
       },
@@ -192,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 149,
       "metadata": {
         "id": "Q97gPStiY_iT"
       },
@@ -242,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": 150,
       "metadata": {
         "id": "_sCMBtKcY_iU"
       },
@@ -253,7 +253,7 @@
         "        rewards = []\n",
         "        state_values=[]\n",
         "\n",
-        "        state = env.reset()\n",
+        "        state, info = env.reset()\n",
         "        for t in range(max_t):\n",
         "            state=torch.from_numpy(state).float().unsqueeze(0).to(device)\n",
         "\n",
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": 151,
       "metadata": {
         "id": "TCVcuaiLY_iV"
       },
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": 152,
       "metadata": {
         "id": "6iiONPljY_iV"
       },
@@ -316,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 162,
       "metadata": {
         "id": "PfX_wUqxY_iW"
       },
@@ -332,7 +332,7 @@
         "        advantages = returns - state_values.detach()\n",
         "\n",
         "        #convect the advantages to a tensor\n",
-        "        advantages = torch.stack(advantages).squeeze()\n",
+        "        advantages = advantages.clone().detach().to(device)\n",
         "\n",
         "        actor_loss = []\n",
         "        # compute the actor loss\n",
@@ -350,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 154,
       "metadata": {
         "id": "FOqUlT_SY_iW"
       },
@@ -382,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 155,
       "metadata": {
         "id": "LYfTpEHDY_iX"
       },
@@ -437,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": 156,
       "metadata": {
         "id": "nqg89aqzY_iY"
       },
@@ -458,7 +458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 157,
       "metadata": {
         "id": "heKHlDWXY_iY"
       },
@@ -472,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": 158,
       "metadata": {
         "id": "EnFDSKwGY_iZ"
       },
@@ -485,30 +485,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "is_executing": true
         },
-        "id": "5-LdCOspY_iZ",
-        "outputId": "1e1fb307-caaa-4d9a-f4b5-6c935323e35a",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 356
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5-LdCOspY_iZ",
+        "outputId": "7a11a0e4-3eb9-4073-e8f9-512e4a862c89"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "expected np.ndarray (got tuple)",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-142-7ff170fd8f78>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m scores = Actor_Critic(cartpole_actor,\n\u001b[0m\u001b[1;32m      2\u001b[0m                    \u001b[0mcartpole_critic\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcartpole_actorOptimizer\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcartpole_criticOptimizer\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                    \u001b[0mcartpole_hyperparameters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"n_training_episodes\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                    \u001b[0mcartpole_hyperparameters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"max_t\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                    \u001b[0mcartpole_hyperparameters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"gamma\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-137-40966e77af3b>\u001b[0m in \u001b[0;36mActor_Critic\u001b[0;34m(actor, critic, actorOptimizer, criticOptimizer, n_training_episodes, max_t, gamma, print_every)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;31m# Generate an episode\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0msaved_log_probs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrewards\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerate_trajectory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcritic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_t\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;31m# Compute the total reward by the end of the episode\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-132-61abf3bd7914>\u001b[0m in \u001b[0;36mgenerate_trajectory\u001b[0;34m(actor, critic, max_t)\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_t\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m             \u001b[0mstate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0maction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlog_prob\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mactor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mact\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: expected np.ndarray (got tuple)"
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-162-acedaa970d6b>:10: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+            "  advantages = torch.tensor(advantages).to(device)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Episode 100\tAverage Score: 64.66\n",
+            "Episode 200\tAverage Score: 336.74\n",
+            "Episode 300\tAverage Score: 850.70\n",
+            "Episode 400\tAverage Score: 273.33\n"
           ]
         }
       ],
